# cppinf

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  justfile
.agents/skills/cppinf-testing/: SKILL.md
.agents/skills/cppinf-testing/references/: oracles.md
src/: greeting.cpp  greeting.h  main.cpp
src/cli/: cli_app.cpp  cli_app.h
src/common/: checked.cpp  checked.h
src/files/: safetensors_file.cpp  safetensors_file.h
src/io/: file.cpp  file.h
src/loaders/hf/: hf_config.cpp  hf_config.h  hf_model_files.cpp  hf_model_files.h  hf_model_summary.cpp  hf_model_summary.h
src/models/qwen3/: README.md  qwen3_model.cpp  qwen3_model.h
src/nn/: causal_self_attention.cpp  causal_self_attention.h  qwen_attention.cpp  qwen_attention.h  qwen_cache.cpp  qwen_cache.h  qwen_common.cpp  qwen_common.h  qwen_decoder_block.cpp  qwen_decoder_block.h  qwen_mlp.cpp  qwen_mlp.h  rope.cpp  rope.h
src/ops/: elementwise_ops.cpp  elementwise_ops.h  matmul.cpp  matmul.h  nn_ops.cpp  nn_ops.h  one_dnn_utils.cpp  one_dnn_utils.h  op_utils.h  tensor_ops.cpp  tensor_ops.h
src/tensors/: bfloat16.cpp  bfloat16.h  dtype.cpp  dtype.h  shape.cpp  shape.h  tensor.cpp  tensor.h  tensor_info.cpp  tensor_info.h  tensor_utils.h  tensor_view.cpp  tensor_view.h
src/tokenizers/hf/: hf_tokenizer.cpp  hf_tokenizer.h
tests/: greeting_test.cpp  tensor_test.cpp  test.h  test_file_utils.h  test_safetensors_utils.h  test_temp_dir.h  test_tensor_utils.h
tests/cli/: cli_app_test.cpp
tests/files/: safetensors_file_test.cpp
tests/loaders/hf/: hf_config_test.cpp  hf_model_files_test.cpp  hf_model_summary_test.cpp
tests/models/qwen3/: qwen3_model_oracle.py  qwen3_model_test.cpp  qwen3_real_last_token_logits.safetensors  qwen3_real_model_oracle.py  qwen3_real_model_test.cpp
tests/nn/: causal_self_attention_oracle.py  causal_self_attention_test.cpp  qwen_attention_oracle.py  qwen_attention_test.cpp  qwen_cache_test.cpp  qwen_decoder_block_oracle.py  qwen_decoder_block_test.cpp  qwen_mlp_oracle.py  qwen_mlp_test.cpp  rope_oracle.py  rope_test.cpp
tests/ops/: ops_test.cpp
tests/tensors/: tensor_test.cpp
tests/tokenizers/hf/: hf_tokenizer_oracle.py  hf_tokenizer_test.cpp
